# msgraph-email-calendar-mcp

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  SECURITY_REVIEW.md  TODO.md  pyproject.toml
scripts/: smoke_test.py
src/msgraph_mcp/: __init__.py  auth.py  calendar.py  config.py  contacts.py  errors.py  graph.py  mail.py  models.py  server.py  tools.py
tests/: test_attachments.py  test_calendar.py  test_calendar_write.py  test_contacts.py  test_graph.py  test_mail.py  test_mail_organize.py  test_mail_send.py  test_models.py
